[package]
name = "charust"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.11.0", features = ["dynamic_linking", "wayland"] }
bevy_rapier2d = "0.22.0"
bevy_simple_tilemap = "0.12.0"
ron = "0.8.0"
serde = { version = "1.0.171", features = ["derive"] }


