[package]
name = "editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
bevy.workspace = true
bevy-inspector-egui = "0.19.0"
bevy_egui = "0.21.0"
bevy_simple_tilemap.workspace = true
futures-lite = "1.13.0"
rfd = "0.11.4"
ron.workspace = true
serde.workspace = true
shared = { path = "../shared" }
simple-home-dir = "0.1.4"
uuid.workspace = true
