[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[lib]
name = "shared"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
bevy.workspace = true
bevy_simple_tilemap.workspace = true
ron.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
